modal window + fixes

--- a/sass/_blocks/_another.sass
+++ b/sass/_blocks/_another.sass
@@ -79,27 +79,27 @@
     background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-first.jpg')
     background-size: cover
     border-radius: 10px
-    background-position: center
+    background-position: center center
 .second-slide
     background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-second.jpg')
     background-size: cover
     border-radius: 10px
-    background-position: center
+    background-position: center center
 .third-slide
     background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-three.jpg')
     background-size: cover
     border-radius: 10px
-    background-position: center
+    background-position: center center
 .forth-slide
     background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-four.jpg')
     background-size: cover
     border-radius: 10px
-    background-position: center
+    background-position: center center
 .fifth-slide
     background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-five.jpg')
     background-size: cover
     border-radius: 10px
-    background-position: center
+    background-position: center center
 .slide
     &__title
         font-family: Roboto Slab
