--- a/sass/_blocks/_footer.sass
+++ b/sass/_blocks/_footer.sass
@@ -52,6 +52,7 @@
         text-transform: uppercase
         color: #262D33
         text-decoration: none
+        cursor: pointer
         &:hover
             color: #4592FF
     &__rechts
