--- a/sass/_blocks/_others.sass
+++ b/sass/_blocks/_others.sass
@@ -112,6 +112,7 @@
             justify-content: space-between
     &__links
         text-decoration: none
+        display: inline-block
         &-an
             text-decoration: none
             display: inline-block
