--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,4 +8,5 @@
 @import "_blocks/_another.sass"
 @import "_blocks/_newsletter.sass"
 @import "_blocks/_footer.sass"
+@import "_blocks/_modal.sass"
 @import "_media.sass"
