--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -39,6 +39,19 @@ body
     font-weight: 400
     font-size: 16px
     padding: 3px 10px
+.message-box-modal
+    // top: 50px
+    border-radius: 0 0 5px 5px
+    width: 100%
+    color: white
+    background-color: red
+    font-family: Lato, sans-serif
+    font-weight: 400
+    font-size: 16px
+    padding: 3px 10px
+    display: block
+.modal__checkbox > .message-box-modal
+    width: 100%
 #email-error
     position: absolute
 h2
