--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -686,7 +686,8 @@
         &__dialog
             transform: translate(-50%, 0%)
             top: 40px
-            height: 100%
+            bottom: 20px
+            max-height: 100%
             overflow-y: auto
             overflow-x: hidden
             scrollbar-color: grey grey
@@ -697,5 +698,7 @@
                 border-radius: 0 10px 10px 0
         &__button-and-info
             margin-bottom: 60px
+        &__form
+            margin-bottom: 30px
 .container
     border: none
