--- a/sass/atricle-style.sass
+++ b/sass/atricle-style.sass
@@ -271,17 +271,18 @@ body
             justify-content: space-between
             &-one
                 padding: 25px 35px
-                overflow: hidden
-                text-overflow: ellipsis
-                display: -webkit-box
-                -webkit-line-clamp: 1
-                -webkit-box-orient: vertical
 
                 font-family: Lato-Cyrillic, sans-serif
                 font-weight: 400
                 font-size: 14px
                 line-height: 20px
                 color: #4B5157
+                &-one
+                    overflow: hidden
+                    text-overflow: ellipsis
+                    display: -webkit-box
+                    -webkit-line-clamp: 1
+                    -webkit-box-orient: vertical
             &-two
                 width: 262px
                 border-left: 1px solid #D9DADB
@@ -346,7 +347,7 @@ body
                 background-color: #262D33
                 color: #fff
     &__devider
-        width: 653px
+        max-width: 653px
         background-color: #D9DADB
         height: 1px
         margin-left: 97px
@@ -428,6 +429,7 @@ body
         border-radius: 10px
         width: 100%
         height: 180px
+        object-fit: cover
     &__title
         font-family: Roboto Slab
         font-weight: 700
@@ -653,8 +655,47 @@ body
                 margin-left: 21px
                 width: 100%
 
-
-
+@media (max-width: 1200px)
+    .text
+        padding-top: 30px
+        &__author
+            position: static
+            margin-bottom: 30px
+        &__paragraph
+            margin-right: 97px
+            max-width: 100%
+            &-post
+                display: none
+        &__devider
+            margin-right: 97px
+            max-width: 100%
+    .articles
+        &__block
+            width: 230px
+        &__container
+            padding-top: 0
+            padding-bottom: 0px
+            flex-wrap: wrap
+            justify-content: space-evenly
+        &__link
+            flex-basis: 45%
+            margin-bottom: 30px
+        &__block
+            width: 100%
+    .comments
+        &__container
+            padding-right: 97px
+        &__title, &__number
+            font-size: 35px
+@media (max-width: 1060px)
+    .mains
+        &__title
+            font-size: 45px
+        &__bookmark
+            right: 0
+            top: 90px
+            left: 100%
+            transform: translate(-30px, 0)
 @media (max-width: 980px)
     .comments
         &__opinion
@@ -665,3 +706,203 @@ body
         &__repost
             &-button:hover
                 background-color: #4592FF
+@media (max-width: 950px)
+    .mains
+        padding-left: 57px
+        padding-right: 27px
+        &__bookmark
+            top: 110px
+    .text
+        &__paragraph
+            margin-left: 50px
+            margin-right: 50px
+        &__title, &__tags, &__repost
+            margin-left: 50px
+        &__devider
+            margin-right: 50px
+            margin-left: 50px
+    .comments
+        &__container
+            padding-left: 50px
+            padding-right: 50px
+        &__title, &__number
+            font-size: 30px
+@media (max-width: 890px)
+    .mains
+        padding-left: 20px
+        padding-right: 20px
+    .text
+        &__quote
+            margin-left: 50px
+        &__slider
+            height: 525px
+            &-meta-name
+                font-size: 12px
+    .swiper-container
+        height: 455px
+@media (max-width: 770px)
+    .mains
+        &__title
+            font-size: 35px
+    .text
+        &__paragraph
+            margin-left: 0px
+            margin-right: 0px
+        &__title, &__tags, &__repost
+            margin-left: 0px
+        &__devider
+            margin-right: 0px
+            margin-left: 0px
+        &__slider
+            height: 425px
+            &-meta-name
+                font-size: 11px
+            &-meta-two
+                padding-left: 10px
+                padding-right: 10px
+        &__quote
+            margin-left: 30px
+            padding-right: 10px
+            width: 100%
+            display: inline
+    .swiper-container
+        height: 355px
+    .articles
+        &__container
+            justify-content: space-between
+        &__link
+            flex-basis: 48%
+    .comments
+        &__container
+            padding-right: 0
+            padding-left: 0
+        &__title, &__number
+            font-size: 25px
+        &__descr-comment
+            font-size: 16px
+@media (max-width: 650px)
+    .mains
+        &__title
+            line-height: 50px
+        &__descr
+            overflow: hidden
+            text-overflow: ellipsis
+            display: -webkit-box
+            -webkit-line-clamp: 4
+            -webkit-box-orient: vertical
+    .hero
+        height: 550px
+@media (max-width: 574px)
+    .mains
+        &__meta
+            margin-top: 23px
+    .swiper
+        &-button
+            &-prev
+                left: 10px !important
+            &-next
+                right: 10px !important
+    .text__slider-meta-two
+        display: none 
+    .text
+        &__slider
+            height: 325px
+    .swiper-container
+        height: 255px
+    .comments
+        &__first
+            flex-wrap: wrap
+        &__title
+            flex-basis: 100%
+            margin-bottom: 15px
+        &__descr
+            &-comment
+                font-size: 15px
+        &__opinion
+            margin-bottom: 0
+            padding-right: 20px
+            padding-left: 10px
+            &-img
+                width: 60px
+                height: 60px
+            &-title
+                font-size: 17px
+        &__avatar
+            width: 60px
+            height: 60px
+@media (max-width: 550px)
+    .mains
+        padding-left: 0px
+        padding-right: 0px
+        &__title
+            font-size: 30px
+            margin-top: 20px
+            overflow: hidden
+            text-overflow: ellipsis
+            display: -webkit-box
+            -webkit-line-clamp: 3
+            -webkit-box-orient: vertical
+        &__first
+            flex-wrap: wrap-reverse
+            margin-top: 30px
+        &__type
+            flex-basis: 100%
+            margin-top: 30px
+        &__meta
+            margin-top: 43px
+    .text
+        &__tags
+            &-tag
+                display: inline-block
+                margin-top: 20px
+        &__repost
+            &-buttons
+                display: block
+            &-button
+                margin-top: 10px
+        &__author-name
+            text-align: center
+    .articles
+        &__link
+            flex-basis: 100%
+            margin-bottom: 30px
+        &__block
+            width: 100%
+@media (max-width: 510px)
+    .comments
+        &__opinion
+            padding-bottom: 0px
+            &-textarea
+                height: 100px
+@media (max-width: 400px)
+    .mains
+        &__link
+            font-size: 13px
+    .comments
+        &__opinion
+            &-img
+                width: 40px
+                height: 40px
+            &-title
+                font-size: 17px
+        &__avatar
+            width: 50px
+            height: 50px
+@media (max-width: 350px)
+    .mains
+        &__link
+            margin-left: 10px
+            font-size: 12px
+@media (max-width: 310px)
+    .mains
+        &__icon
+            display: none
+    .comments
+        &__descr
+            &-m
+                flex-wrap: wrap
+                &-comments
+                    flex-basis: 100%
+                    display: flex
+                    justify-content: start
+                    margin-bottom: 10px
