--- a/sass/atricle-style.sass
+++ b/sass/atricle-style.sass
@@ -350,6 +350,7 @@ body
         padding-top: 15px
         padding-bottom: 60px
         display: flex
+        flex-wrap: wrap
         &-tag
             padding: 4px 14px
             font-family: Lato-Cyrillic, sans-serif
@@ -942,6 +943,9 @@ body
         &__avatar
             width: 50px
             height: 50px
+        &__comment
+            &-two
+                margin-left: 20%
 @media (max-width: 350px)
     .mains
         &__link
