--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,22 +6,27 @@ body
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Black.ttf')
     font-weight: 900
+    font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Bold.ttf')
     font-weight: 700
+    font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Regular.ttf')
     font-weight: 400
+    font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Light.ttf')
     font-weight: 300
+    font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Thin.ttf')
     font-weight: 100
+    font-display: swap
 
 .container
     max-width: 1140px
