--- a/sass/atricle-style.sass
+++ b/sass/atricle-style.sass
@@ -7,6 +7,7 @@ body
         color: #939699
     &__search-input
         background-color: #F5F5F5
+        color: #939699
         &::placeholder
             font-family: Lato-Cyrillic, sans-serif
             font-weight: 400
@@ -761,6 +762,8 @@ body
             color: #262D33
         &__link:hover
             color: #262D33
+    #myBtn:hover
+        background-color: #4592FF
 @media (max-width: 950px)
     .mains
         padding-left: 57px
