--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -197,6 +197,8 @@
         &__dialog
             padding-left: 30px
             padding-right: 30px
+    #myBtn:hover
+        background-color: #4592FF
 @media (max-width: 950px)
     .container
         width: 880px
