--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,5 +1,7 @@
 *
     box-sizing: border-box
+html
+    scroll-behavior: smooth
 body
     background-color: #E5E5E5
 @font-face
@@ -62,3 +64,20 @@ body
 h2
     margin: 0
     padding: 0
+
+#myBtn
+  display: none
+  position: fixed
+  bottom: 20px
+  right: 30px
+  z-index: 99
+  border: none
+  outline: none
+  background-color: #4592FF
+  color: white
+  cursor: pointer
+  padding: 15px
+  border-radius: 10px
+  font-size: 18px
+#myBtn:hover
+  background-color: #555
