--- a/sass/_blocks/_another.sass
+++ b/sass/_blocks/_another.sass
@@ -76,30 +76,30 @@
 .swiper-pagination-bullet-active
     background-color: #fff !important
 .first-slide
-    background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-first.jpg')
-    background-size: cover
+    // background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-first.jpg')
+    background-size: cover !important
     border-radius: 10px
-    background-position: center center
+    background-position: center center !important
 .second-slide
-    background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-second.jpg')
-    background-size: cover
+    // background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-second.jpg')
+    background-size: cover !important
     border-radius: 10px
-    background-position: center center
+    background-position: center center !important
 .third-slide
-    background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-three.jpg')
-    background-size: cover
-    border-radius: 10px
-    background-position: center center
+    // background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-three.jpg')
+    background-size: cover !important
+    border-radius: 10px 
+    background-position: center center !important
 .forth-slide
-    background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-four.jpg')
-    background-size: cover
+    // background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-four.jpg')
+    background-size: cover !important
     border-radius: 10px
-    background-position: center center
+    background-position: center center !important
 .fifth-slide
-    background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-five.jpg')
-    background-size: cover
+    // background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35)), url('../img/another-five.jpg')
+    background-size: cover !important
     border-radius: 10px
-    background-position: center center
+    background-position: center center !important
 .slide
     &__title
         font-family: Roboto Slab
