--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,29 +6,48 @@ body
     background-color: #E5E5E5
 @font-face
     font-family: 'Lato-Cyrillic'
-    src: url('../fonts/Lato/Lato-Black.ttf')
+    src: url('../fonts/Lato/Lato-Black.ttf') format("truetype")
     font-weight: 900
     font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
-    src: url('../fonts/Lato/Lato-Bold.ttf')
+    src: url('../fonts/Lato/Lato-Bold.ttf') format("truetype")
     font-weight: 700
     font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
-    src: url('../fonts/Lato/Lato-Regular.ttf')
+    src: url('../fonts/Lato/Lato-Regular.ttf') format("truetype")
     font-weight: 400
     font-display: swap
 @font-face
     font-family: 'Lato-Cyrillic'
-    src: url('../fonts/Lato/Lato-Light.ttf')
+    src: url('../fonts/Lato/Lato-Regular.ttf') format("truetype")
     font-weight: 300
     font-display: swap
+
+
+
 @font-face
-    font-family: 'Lato-Cyrillic'
-    src: url('../fonts/Lato/Lato-Thin.ttf')
-    font-weight: 100
+    font-family: 'Lato'
+    src: url('../fonts/Lato/Lato-Black.ttf') format("truetype")
+    font-weight: 900
     font-display: swap
+@font-face
+    font-family: 'Lato'
+    src: url('../fonts/Lato/Lato-Bold.ttf') format("truetype")
+    font-weight: 700
+    font-display: swap
+@font-face
+    font-family: 'Lato'
+    src: url('../fonts/Lato/Lato-Regular.ttf') format("truetype")
+    font-weight: 400
+    font-display: swap
+@font-face
+    font-family: 'Lato'
+    src: url('../fonts/Lato/Lato-Light.ttf') format("truetype")
+    font-weight: 300
+    font-display: swap
+
 
 .container
     max-width: 1140px
