--- a/sass/_blocks/_news.sass
+++ b/sass/_blocks/_news.sass
@@ -144,8 +144,8 @@
             color: #262D33
             width: 70px
             margin: auto
-            margin-top: 11px
-            margin-bottom: 14px
+            padding-top: 11px
+            padding-bottom: 14px
     &__devide
         width: 100%
         height: 1px
